# proyecto_2_AI

./: .gitignore
C++/: CMakeLists.txt  main.cpp  run.sh
C++/classes/: dataframe.cpp  dataframe.h  ds_tree.cpp  ds_tree.h  kdtree.h
C++/utils/: cfunctions.cpp  cfunctions.h
Python/: main.py  nohup.out  requirements.txt  run.sh
Report/: .gitignore  IEEEtran.cls  main.tex
